<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/studentName"
        android:hint="@string/hint_studentName"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/phoneNumber"
        android:layout_alignStart="@+id/phoneNumber"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/phoneNumber"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_phoneNumber"
        android:layout_below="@+id/studentName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="77dp"
        android:inputType="phone" />

    <Button
        android:layout_width="131dp"
        android:layout_height="wrap_content"
        android:id="@+id/details_btn"
        android:layout_gravity="center_horizontal"
        android:hint="@string/details_btn"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/display_details"
        android:layout_below="@+id/details_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="49dp"
        android:textAlignment="center"
        android:textSize="21sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/registerStudent_btn"
        android:id="@+id/registerStudent_btn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/register_btn"
        android:textColor="#ffffff"
        android:textSize="25sp"
        android:textStyle="normal" />

</RelativeLayout>
